Bug 1594083 - Check if we got the pref service before using it to avoid a crash r=mhowell

Differential Revision: https://phabricator.services.mozilla.com/D59016

--HG--
extra : moz-landing-system : lando